fix: Header spacing

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -9,7 +9,6 @@
 }
 
 .header-content {
-    width: 100%;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
